--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="bottom">
                         <h3>Description</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit corrupti eius ipsa adipisci ducimus ex!</p>
+                        <p>The Nike React Element 55 SE is a balanced blend of classic design and forward-looking innovation.Nike React foam delivers an extremely smooth ride, while rubber pods on the exaggerated outsole offer a cutting-edge look that begs a reaction.</p>
                         <div class="options">
                             <i class="bi bi-heart-fill"></i>
                             <a href="#">$110 - Buy</a>
