--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                         </div>
                         <h3>Nike</h3>
                         <h1>React 55</h1>
-                        <h5>1/6</h5>
+                        <h4>$130</h5>
                     </div>
                     <div class="bottom">
                         <h3>Description</h3>
-                        <p>The Nike React Element 55 SE is a balanced blend of classic design and forward-looking innovation.Nike React foam delivers an extremely smooth ride, while rubber pods on the exaggerated outsole offer a cutting-edge look that begs a reaction.</p>
+                        <p>The Nike React Element 55 borrows design lines from heritage runners like the Nike Internationalist and then places it all on Nike React technology.</p>
                         <div class="options">
                             <i class="bi bi-heart-fill"></i>
-                            <a href="#">$110 - Buy</a>
+                            <a href="#">Add to Bag</a>
                         </div>
                     </div>
                 </div>
